tests/assembler/bad/invalid_unicode_name.j
.class  "astral\uDCA9\uD83Dx2"
.super java/lang/Object
.end class
